// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-form example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#ffffff",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="checkbox"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#1865f2",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="checkbox"
    />
    <svg
      className=""
      height={16}
      style={
        Object {
          "display": "inline-block",
          "pointerEvents": "none",
          "position": "absolute",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
        fill="#ffffff"
      />
    </svg>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#fceeec",
          "borderColor": "#d92916",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="checkbox"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#d92916",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="checkbox"
    />
    <svg
      className=""
      height={16}
      style={
        Object {
          "display": "inline-block",
          "pointerEvents": "none",
          "position": "absolute",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
        fill="#ffffff"
      />
    </svg>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#f7f8fa",
          "borderColor": "rgba(33,36,44,0.16)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "auto",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={-1}
      type="checkbox"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className=""
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#f7f8fa",
          "borderColor": "rgba(33,36,44,0.16)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "auto",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={-1}
      type="checkbox"
    />
    <svg
      className=""
      height={16}
      style={
        Object {
          "display": "inline-block",
          "pointerEvents": "none",
          "position": "absolute",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
        fill="rgba(33,36,44,0.32)"
      />
    </svg>
  </div>
</div>
`;

exports[`wonder-blocks-form example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "center",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "maxWidth": 600,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <label
      htmlFor="topic-123"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": Array [
              "Lato",
              "sans-serif",
            ],
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
          }
        }
      >
        Functions
      </span>
    </label>
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": Array [
            "Lato",
            "sans-serif",
          ],
          "fontSize": 14,
          "fontWeight": 400,
          "lineHeight": "18px",
        }
      }
    >
      A great cook knows how to take basic ingredients and
                prepare a delicious meal. In this topic, you will become function-chefs! You
                will learn how to combine functions with arithmetic operations and how to
                compose functions.
    </span>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={false}
      id="topic-123"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#ffffff",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`wonder-blocks-form example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={false}
      name="group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#ffffff",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="radio"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className=""
      disabled={false}
      name="group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#ffffff",
          "borderColor": "#1865f2",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 4,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="radio"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={false}
      name="group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#fceeec",
          "borderColor": "#d92916",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="radio"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className=""
      disabled={false}
      name="group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#ffffff",
          "borderColor": "#d92916",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 4,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={0}
      type="radio"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className=""
      disabled={true}
      name="group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#f7f8fa",
          "borderColor": "rgba(33,36,44,0.16)",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "auto",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={-1}
      type="radio"
    />
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "marginRight": 16,
        "minHeight": 0,
        "minWidth": 0,
        "outline": "none",
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className=""
      disabled={true}
      name="group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundColor": "#f7f8fa",
          "borderColor": "rgba(33,36,44,0.16)",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "cursor": "auto",
          "height": 16,
          "margin": 0,
          "outline": "none",
          "width": 16,
        }
      }
      tabIndex={-1}
      type="radio"
    />
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "backgroundColor": "rgba(33,36,44,0.32)",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 8,
          "left": 4,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "absolute",
          "top": 4,
          "width": 8,
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`wonder-blocks-form example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
      tabIndex={-1}
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          className=""
          data-test-id="algebra-assignment-test"
          disabled={false}
          id="assignment"
          onChange={[Function]}
          style={
            Object {
              "MozAppearance": "none",
              "WebkitAppearance": "none",
              "appearance": "none",
              "backgroundColor": "#ffffff",
              "borderColor": "rgba(33,36,44,0.50)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "height": 16,
              "margin": 0,
              "outline": "none",
              "width": 16,
            }
          }
          type="checkbox"
        />
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": Array [
              "Lato",
              "sans-serif",
            ],
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
          }
        }
      >
        <label
          htmlFor="assignment"
        >
          Receive assignment reminders for Algebra
        </label>
      </span>
    </div>
  </div>
<<<<<<< HEAD
=======
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "MsFlexBasis": 8,
        "MsFlexPreferredSize": 8,
        "WebkitFlexBasis": 8,
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": 8,
        "flexDirection": "column",
        "flexShrink": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  />
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
      tabIndex={-1}
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          className=""
          disabled={false}
          id="agree"
          onChange={[Function]}
          style={
            Object {
              "MozAppearance": "none",
              "WebkitAppearance": "none",
              "appearance": "none",
              "backgroundColor": "#ffffff",
              "borderColor": "rgba(33,36,44,0.50)",
              "borderRadius": "50%",
              "borderStyle": "solid",
              "borderWidth": 1,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "height": 16,
              "margin": 0,
              "outline": "none",
              "width": 16,
            }
          }
          type="radio"
        />
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
          }
        }
      >
        <label
          htmlFor="agree"
        >
          I agree to not cheat in Algebra
        </label>
      </span>
    </div>
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "color": "rgba(33,36,44,0.64)",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontWeight": 400,
          "lineHeight": "18px",
          "marginLeft": 24,
          "marginTop": 6,
        }
      }
    >
      because otherwise I will never learn!
    </span>
  </div>
>>>>>>> a585e8d... Address TODOs for Choice
</div>
`;

exports[`wonder-blocks-form example 5 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "width": 300,
      "zIndex": 0,
    }
  }
>
  <fieldset
    className=""
    style={
      Object {
        "border": "none",
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <legend>
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "display": "block",
              "fontFamily": Array [
                "Lato",
                "sans-serif",
              ],
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
            }
          }
        >
          Pizza order
        </span>
      </legend>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "color": "rgba(33,36,44,0.64)",
            "display": "block",
            "fontFamily": Array [
              "Lato",
              "sans-serif",
            ],
            "fontSize": 14,
            "fontWeight": 400,
            "lineHeight": "18px",
            "marginTop": 6,
          }
        }
      >
        You may choose at most three toppings
      </span>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Toppings-pepperoni"
              name="Toppings"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="checkbox"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Toppings-pepperoni"
            >
              Pepperoni
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Toppings-sausage"
              name="Toppings"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="checkbox"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Toppings-sausage"
            >
              Sausage
            </label>
          </span>
        </div>
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "color": "rgba(33,36,44,0.64)",
              "display": "block",
              "fontFamily": Array [
                "Lato",
                "sans-serif",
              ],
              "fontSize": 14,
              "fontWeight": 400,
              "lineHeight": "18px",
              "marginLeft": 24,
              "marginTop": 6,
            }
          }
        >
          Imported from Italy
        </span>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Toppings-cheese"
              name="Toppings"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="checkbox"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Toppings-cheese"
            >
              Extra cheese
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Toppings-pepper"
              name="Toppings"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="checkbox"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Toppings-pepper"
            >
              Green pepper
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Toppings-mushroom"
              name="Toppings"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="checkbox"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Toppings-mushroom"
            >
              Mushroom
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={true}
              checked={true}
              className=""
              disabled={false}
              id="Toppings-pineapple"
              name="Toppings"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#1865f2",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="checkbox"
            />
            <svg
              className=""
              height={16}
              style={
                Object {
                  "display": "inline-block",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
                fill="#ffffff"
              />
            </svg>
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Toppings-pineapple"
            >
              Pineapple
            </label>
          </span>
        </div>
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "color": "rgba(33,36,44,0.64)",
              "display": "block",
              "fontFamily": Array [
                "Lato",
                "sans-serif",
              ],
              "fontSize": 14,
              "fontWeight": 400,
              "lineHeight": "18px",
              "marginLeft": 24,
              "marginTop": 6,
            }
          }
        >
          Does in fact belong on pizzas
        </span>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`wonder-blocks-form example 6 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "width": 300,
      "zIndex": 0,
    }
  }
>
  <fieldset
    className=""
    style={
      Object {
        "border": "none",
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <legend>
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "display": "block",
              "fontFamily": Array [
                "Lato",
                "sans-serif",
              ],
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
            }
          }
        >
          Choose a starter!
        </span>
      </legend>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "color": "rgba(33,36,44,0.64)",
            "display": "block",
            "fontFamily": Array [
              "Lato",
              "sans-serif",
            ],
            "fontSize": 14,
            "fontWeight": 400,
            "lineHeight": "18px",
            "marginTop": 6,
          }
        }
      >
        Your first Pokemon
      </span>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Pokemon-bulb"
              name="Pokemon"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": "50%",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="radio"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Pokemon-bulb"
            >
              Bulbasaur
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={true}
              id="Pokemon-char"
              name="Pokemon"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#f7f8fa",
                  "borderColor": "rgba(33,36,44,0.16)",
                  "borderRadius": "50%",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "auto",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="radio"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "color": "rgba(33,36,44,0.32)",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Pokemon-char"
            >
              Charmander
            </label>
          </span>
        </div>
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "color": "rgba(33,36,44,0.64)",
              "display": "block",
              "fontFamily": Array [
                "Lato",
                "sans-serif",
              ],
              "fontSize": 14,
              "fontWeight": 400,
              "lineHeight": "18px",
              "marginLeft": 24,
              "marginTop": 6,
            }
          }
        >
          Oops, we ran out of Charmanders
        </span>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Pokemon-squirt"
              name="Pokemon"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": "50%",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="radio"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Pokemon-squirt"
            >
              Squirtle
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Pokemon-pika"
              name="Pokemon"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": "50%",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="radio"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Pokemon-pika"
            >
              Pikachu
            </label>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 8,
            "MsFlexPreferredSize": 8,
            "WebkitFlexBasis": 8,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 8,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "row",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
          tabIndex={-1}
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <input
              aria-checked={false}
              checked={false}
              className=""
              disabled={false}
              id="Pokemon-infiltrator"
              name="Pokemon"
              onChange={[Function]}
              style={
                Object {
                  "MozAppearance": "none",
                  "WebkitAppearance": "none",
                  "appearance": "none",
                  "backgroundColor": "#ffffff",
                  "borderColor": "rgba(33,36,44,0.50)",
                  "borderRadius": "50%",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "height": 16,
                  "margin": 0,
                  "outline": "none",
                  "width": 16,
                }
              }
              type="radio"
            />
          </div>
          <div
            aria-hidden="true"
            className=""
            style={
              Object {
                "MsFlexBasis": 8,
                "MsFlexPreferredSize": 8,
                "WebkitFlexBasis": 8,
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": 8,
                "flexDirection": "column",
                "flexShrink": 0,
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          />
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": Array [
                  "Lato",
                  "sans-serif",
                ],
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            <label
              htmlFor="Pokemon-infiltrator"
            >
              Superman
            </label>
          </span>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
